# readmeWriterAssistant

./: README.md  pyproject.toml
src/: app.py
src/readmewriterassistant/: files_manager.py  llms.py
